static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lugrasimo&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');

:root {
    --width: 720px;
    --font-main: "PT Serif", serif;
    --font-special: "Lugrasimo", cursive;
    --font-scale: 1em;
    --background-color: #262626;
    --heading-color: #eee;
    --text-color: #ddd;
    --link-color: #8fbacf;
    --visited-color: #9288aa;
    --figcaption-color: #a4a4a4;
    --code-background-color: #262626;
    --code-color: #ddd;
    --blockquote-color: #ccc;
}

body {
    font-family: var(--font-main);
    font-size: var(--font-scale);
    margin: auto;
    padding: 20px;
    max-width: var(--width);
    text-align: left;
    word-wrap: break-word;
    overflow-wrap: break-word;
    line-height: 1.6;
    color: var(--text-color);
    background-color: var(--background-color);
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-main);
    color: var(--heading-color);
    line-height: 1.2;
}

a {
    color: var(--link-color);
    cursor: pointer;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

nav a {
    margin-right: 8px;
}

strong, b {
    color: var(--heading-color);
}

button {
    margin: 0;
    cursor: pointer;
}

time {
    font-family: var(--font-special);
    font-style: normal;
    font-size: 14px;
}

main {
    line-height: 1.6;
}

table {
    width: 100%;
}

hr {
    border: 0;
    border-top: 1px dashed;
}

img {
    max-width: 100%;
}

figure > * {
    margin: 0 auto 0.55em;
    display: block;
}

figure > figcaption {
    color: var(--figcaption-color);
    text-align: center;
}

blockquote {
    border-left: 1px solid #999;
    color: var(--code-color);
    padding-left: 20px;
    font-style: italic;
}

footer {
    padding: 25px 0;
    text-align: center;
}

.title:hover {
    text-decoration: none;
}

.title h1 {
    font-size: 1.5em;
}

.inline {
    width: auto !important;
}

/* blog post content */
.post-header > h1 {
    line-height: 1.25;
    font-size: 2.0em;
}

.post-content > p {
    text-align: justify;
}

.post-content img {
    display: block;
    margin: auto;
}

/* blog post list */
ul.blog-posts {
    list-style-type: none;
    padding: unset;
}

ul.blog-posts li {
    display: flex;
}

ul.blog-posts li span {
    flex: 0 0 130px;
}

ul.blog-posts li a:visited {
    color: var(--visited-color);
}

.profile-container {
    max-width: 800px;
    margin: 0 auto;
}

.profile-content::after {
    content: "";
    display: table;
    clear: both;
}

.profile-image {
    float: left;
    width: 200px;
    margin: 10px 20px 0 0;
    border-radius: 8px;
}

@media (max-width: 575.98px) {
    .profile-image {
        width: 100px;
    }

    .post-content > p {
        text-align: left;
    }
}

